cleaned up css and spacing issues

--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,9 @@
 
 body {
   padding: 0px;
-  margin: 0px;
+
   max-width: 100%;
+  padding-bottom: 15%;
 }
 
 h1,
@@ -107,4 +108,19 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
 }
-
+@media (max-width: 500px) {
+  h1 {
+    font-size: 42px;
+  }
+  .abouth1 {
+    font-size: 52px;
+  }
+  .app-link {
+    display: block;
+    text-align: center;
+    margin: 0 70px;
+  }
+  img {
+    padding: 15 15;
+  }
+}
